# LibTorch-ResNet-CIFAR

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
dataset/: .gitignore  cifar-10-binary.tar.gz.md5  download-cifar10-binary.sh
docker/: torch.Dockerfile
include/: cifar10.h  resnet.h
src/: CMakeLists.txt  cifar10.cpp  resnet-cifar-demo.cpp  resnet.cpp
